The stream-based solution is real